# pq-sqisign

./: .gitignore  Cargo.toml  README.md
.github/workflows/: sqisign.yml
benches/: sqisign.rs
src/: ec.rs  encoding.rs  error.rs  gf.rs  hash.rs  isogeny.rs  keypair.rs  level_constants.rs  lib.rs  macros.rs  params.rs  quaternion.rs  rng.rs  signing.rs  signing_key.rs  sqisignature.rs  verification.rs  verifying_key.rs  wire.rs
src/ec/: biscalar.rs  couple.rs  jacobian.rs  montgomery.rs  weil.rs
src/gf/: arch.rs  fp.rs  fp1_intrinsics.rs  fp2.rs
src/isogeny/: clapotis.rs  clapotis_spine.rs  endomorphism.rs  fixed_degree.rs  gluing.rs  splitting.rs  theta.rs  theta_chain.rs  theta_doubling.rs  theta_isogeny.rs  two.rs
src/params/: lvl1.rs  lvl3.rs  lvl5.rs
src/quaternion/: algebra.rs  blinding.rs  connecting_ideals.rs  cornacchia.rs  curves_with_endomorphism.rs  dpe.rs  extremal_orders.rs  hnf.rs  ideal.rs  ideal_mul.rs  klpt.rs  lattice.rs  lattice_ops.rs  lll.rs  norm_search.rs  o0_mul.rs  primality.rs  represent_integer.rs  sample.rs  short_vec.rs  sign_orchestration.rs  smooth.rs  sqrt_mod.rs
tests/: ct_signing.rs  kat.rs  serde_roundtrip.rs
