[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["algorithms", "cryptography"]
description = "Pure-Rust implementation of SQIsign post-quantum signatures based on quaternions and isogenies"
documentation = "https://docs.rs/crate/pq-sqisign"
edition = "2024"
exclude = ["tests/KAT/*.req"]
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "isogeny", "post-quantum", "signature"]
name = "pq-sqisign"
readme = "README.md"
repository = "https://github.com/mikelodder7/pq-sqisign"
version = "0.1.0"
rust-version = "1.85"

[features]
default = ["std", "kgen", "sign", "vrfy"]
std = ["alloc", "subtle/std", "zeroize/std"]
alloc = ["crypto-bigint/alloc"]
kgen = []
sign = ["kgen"]
vrfy = []
serde = ["dep:serdect", "dep:serde"]
js = ["dep:getrandom", "getrandom/wasm_js"]
# Test-only: NIST PQC AES-256-CTR_DRBG for KAT byte-exact reproduction.
# Pulls in the `aes` dep. Production users provide their own CryptoRng.
kat = ["dep:aes"]

[dependencies]
aes = { version = "0.9", default-features = false, optional = true }
crypto-bigint = { version = "0.7", default-features = false, features = ["rand_core", "zeroize", "subtle"] }
shake = { version = "0.1", default-features = false }
rand_core = { version = "0.10", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
hybrid-array = { version = "0.4", features = ["zeroize"] }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
serdect = { version = "0.4", optional = true, default-features = false }
getrandom = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
hex = "0.4"
rand = "0.10"
rand_chacha = "0.10"

[[test]]
name = "kat"
path = "tests/kat.rs"
required-features = ["kgen", "sign", "vrfy"]

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unstable_features = "deny"
unused_import_braces = "deny"
unused_parens = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_extern_crates = "deny"

[lints.clippy]
unwrap_used = "deny"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
mod_module_files = "warn"
panic = "warn"
panic_in_result_fn = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
